# System-Architecture-Diagram

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  train_gliner2_colab.ipynb
app/: huggingface_upload.py  main.py
app/api/: routes_chat.py  routes_export.py  routes_sessions.py  routes_steps.py
app/common/: vocab.json
app/core/: candidates.py  langfuse_client.py  logging.py  settings.py  storage.py  store.py
app/extract/: candidate_extractor.py  fuzzy_matcher.py  gliner_client.py  matchers.py  resolvers.py
app/graph/: build.py  checkpointer.py  compiled.py  graph.py  node_wrapped.py  routers.py  runner.py  state.py  vocab.py
app/nodes/: assign_ids.py  chat_handler.py  chat_processor.py  compose.py  export.py  init_session.py  prefill.py  review.py  step_corp_center.py  step_edges.py  step_networks.py  step_next_scope.py  step_scope_detail.py  step_user.py  step_zone_detail.py
app/schemas/: graphdb_schema.py  ui_payloads.py
data/: test.jsonl  test2.jsonl  tmp_ko_1k.jsonl  train.jsonl  train_en_1k.jsonl  train_ko_2k.jsonl  val.jsonl
data/v4_1/: train.jsonl  val.jsonl
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatBot.tsx  CorpCenterStep.tsx  EdgesStep.tsx  NetworksStep.tsx  ScopeDetailStep.tsx  StepIndicator.tsx
gliner2/: model.py  processor.py
gliner2/inference/: README.md  engine.py
scripts/: check_model_structure.py  convert_to_spans.py  debug_gen.py  make_dataset.py  train_gliner2.py  validate_dataset.py
scripts/data/: merge_and_split_jsonl.py  split_dataset.py  train.jsonl  train4.jsonl  train5.jsonl  train6.jsonl  train_ko.jsonl  train_ko_1.jsonl  val.jsonl  val2.jsonl  val4.jsonl  val5.jsonl  val6.jsonl  val7.jsonl  val_ko_1.jsonl  val_merged.jsonl
tests/: .env.example
